--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ body {
   color: #212529;
 }
 
+.nohay{
+  color: white;
+}
 .contenedor {
   max-width: 720px;
   border: 8px solid mediumseagreen;
@@ -54,7 +57,8 @@ body {
   font-weight: 600;
   display: block;
   margin-bottom: 6px;
-  color: #343a40;
+  color: #f8f9fa;
+  text-align: left;
 }
 
 .campo {
@@ -126,6 +130,7 @@ body {
 .detalle {
   font-size: 0.9rem;
   color: #212529;
+  text-align: left;
 }
 
 .acciones {
